--- a/style.css
+++ b/style.css
@@ -28,6 +28,14 @@ h1 {
 h2{
 	font-size: 4em;
 	line-height: 1%;
+    color: #d5e2c7;
+
+}
+
+h3{
+	color: #3169b3;
+	font-size: 1.8em;
+	line-height: 1%;
 }
 
 ul li {
@@ -45,12 +53,17 @@ ul li a {
 }
 
 .header {
+/*	position: sticky;
+	left: 0px;
+	width: 350px;
+	height: 98vh;*/
 	margin-right: 5vw;
 	padding-left: 1vw;
 	padding-top: 1vh;
 	display: block;
-	position: relative;
     float: left;
+    z-index: 1;
+    background-color: white;
 }
 
 #header-description{
@@ -86,23 +99,99 @@ ul li a {
     position: relative;
 }*/
 
+#tag {
+	position: absolute;
+    bottom: 230px;
+    color: #d5e2c7;
+	font-size: 0.7em;
+	font-weight: 300;
+}
+
+#project-description {
+	position: absolute;
+    bottom: 80px;
+}
+
+#project-name {
+	position: absolute;
+    top: 400px;
+}
+
+#date {
+	position: absolute;
+    bottom: 25px;
+    color: #c2b69c;
+	font-size: 0.7em;
+}
+
 #expand {
-	width: 16vw;
+	top: 0px;
+	bottom: 0px;
+	width: 28vw;
 	height:98vh;
-    display: none;
-    float: left;
+    display: inline-block;
+/*    float: left;*/
     border-left: 0.25px;
     padding-left: 20px;
     border-left: solid 1px #d5e2c7;
     background: white;
-    position: relative;
+    position: absolute;
+    margin-bottom: 4px;
+    z-index: -1;
 }
 
 .thumb {
-	width: 20vw;
+	width: 100%;
 	height: 80vh;
 	display: inline;
+	position: static;
 }
+
+
+
+img {
+	height: 98vh;
+	margin-bottom: 4px;
+	position: static;
+	display: inline-block;
+	z-index: 0;
+}
+
+/*//////////////////////////*/
+
+#item4:hover {
+	transform: translate(17vw);
+}
+
+#item3:hover {
+	transform: translate(17vw);
+}
+
+#item2:hover {
+	transform: translate(17vw);
+}
+
+#item1:hover {
+	transform: translate(17vw);
+}
+
+/*span:hover + #expand {
+    display: inline-block;
+}*/
+
+
+/*#no4 {
+	width: 2%;
+	height: 80vh;
+	display: inline;
+	position: static;
+	overflow-x: hidden;
+	transition-duration: 1s;
+}
+
+#no4:hover {
+	transition: width 100%;
+}*/
 
 /*span {
 	width: 10vw;
@@ -111,11 +200,9 @@ ul li a {
     -webkit-transition: width 2s;
 }*/
 
-img {
-	height: 98vh;
-	margin-bottom: 4px;
-}
-
-span:hover + #expand {
-    display: block;
-}
+/*span {
+	width: 2%;
+	display: inline-block;
+	position: static;
+	overflow-x: hidden;
+}*/
