--- a/style.css
+++ b/style.css
@@ -12,6 +12,55 @@ body {
     position: relative;
 }
 
+html {
+    overflow: scroll;
+    overflow-x: hidden;
+}
+::-webkit-scrollbar {
+    width: 0px;  /* remove scrollbar space */
+    height: 1px;
+    /*background: transparent;*/  /* optional: just make scrollbar invisible */
+}
+/* optional: show position indicator in red */
+::-webkit-scrollbar-thumb {
+	width: 1px;
+    background: #d5e2c7;
+}
+
+/*.scrollbar {
+    background-color: #F5F5F5;
+    bottom: 0px;
+    float: left;
+    height: 2px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    width: 100%;
+    overflow-x: scroll;
+    z-index: -2;
+}
+
+.force-overflow {
+    min-width: 450px;
+}
+
+#style-1::-webkit-scrollbar {
+    width: 6px;
+    background-color: #F5F5F5;
+} 
+
+#style-1::-webkit-scrollbar-thumb {
+    background-color: #000000;
+}
+
+#style-1::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color: #F5F5F5;
+}
+
+#element::-webkit-scrollbar { 
+    display: none; 
+}
+*/
 p {
 	line-height: 50%;
 	font-size: 0.7em;
@@ -128,7 +177,7 @@ ul li a {
 	top: 0px;
 	bottom: 0px;
 	width: 28vw;
-	height:98vh;
+	height:96vh;
     display: inline-block;
 /*    float: left;*/
     border-left: 0.25px;
@@ -150,8 +199,8 @@ ul li a {
 
 
 img {
-	height: 98vh;
-	margin-bottom: 4px;
+	height: 96vh;
+	margin-bottom: 4.8px;
 	position: static;
 	display: inline-block;
 	z-index: 0;
@@ -159,20 +208,47 @@ img {
 
 /*//////////////////////////*/
 
+#item4 {
+	padding-right: 0px;
+	transition: transform 0.2s, padding-right 0.2s;
+}
+
 #item4:hover {
 	transform: translate(17vw);
+	padding-right: 17vw;
+}
+
+/*//////////////////////////*/
+
+#item3 {
+	transition: transform 0.2s, padding-right 0.2s;
 }
 
 #item3:hover {
 	transform: translate(17vw);
+	padding-right: 17vw;
+}
+
+/*//////////////////////////*/
+
+#item2 {
+	transition: transform 0.1s, padding-right 0.2s;
 }
 
 #item2:hover {
 	transform: translate(17vw);
+	padding-right: 17vw;
+}
+
+/*//////////////////////////*/
+
+#item1 {
+	transition: transform 0.1s, padding-right 0.2s;
 }
 
 #item1:hover {
 	transform: translate(17vw);
+	padding-right: 17vw;
 }
 
 /*span:hover + #expand {
